#
#       Copyright (c) 2004 on behalf of the EU EGEE Project:
#       The European Organization for Nuclear Research (CERN),
#       Istituto Nazionale di Fisica Nucleare (INFN), Italy
#       Datamat Spa, Italy
#       Centre National de la Recherche Scientifique (CNRS), France
#       CS Systeme d'Information (CSSI), France
#       Royal Institute of Technology, Center for Parallel Computers (KTH-PDC), Sweden
#       Universiteit van Amsterdam (UvA), Netherlands
#       University of Helsinki (UH.HIP), Finland
#       University of Bergen (UiB), Norway
#       Council for the Central Laboratory of the Research Councils (CCLRC), United Kingdom
#
#       Authors: Francesco Prelz <francesco.prelz@mi.infn.it>
#       Version info: $Id: configure.ac,v 1.54 2012/03/01 13:26:54 pandreet Exp $
#       Release: $Name:  $
#
#       Revision history:
#       $Log: configure.ac,v $
#       Revision 1.54  2012/03/01 13:26:54  pandreet
#       Changed version number
#
#       Revision 1.53  2012/02/15 13:55:15  pandreet
#       Disabled build for BPR; replaced macro for globus
#
#       Revision 1.52  2011/12/09 10:42:38  pandreet
#       version definition from autoconf
#
#       Revision 1.51  2011/12/07 10:59:57  pandreet
#       Fixes for sl6
#
#       Revision 1.50  2011/11/29 14:11:38  pandreet
#       Templates for man pages
#
#       Revision 1.49  2011/09/22 08:12:13  pandreet
#       Changes for the new packager
#
#       Revision 1.48  2010/10/08 14:55:48  fprelz
#       Added an option to access the job registry index in a shared fashion
#       by multiple blahpd processes via mmap.
#
#       Revision 1.47  2010/05/26 09:30:44  fprelz
#       Bumped version up to 1.17.0
#
#       Revision 1.46  2009/07/21 15:08:56  fprelz
#       Bumped version up to 1.15.0.
#
#       Revision 1.45  2009/05/19 09:04:56  drebatto
#       Added BLAH_SET_SUDO_ID and BLAH_SET_SUDO_OFF commands.
#       Bumped version to 1.13.4.
#
#       Revision 1.44  2009/04/24 23:38:09  fprelz
#       Bumped version up to 1.13.3.
#
#       Revision 1.43  2009/03/12 11:58:23  fprelz
#       Increased version number.
#
#       Revision 1.42  2009/03/12 11:56:18  fprelz
#       Increased version number.
#
#       Revision 1.41  2008/12/11 09:21:00  fprelz
#       Bumped version up to 1.13.0.
#
#       Revision 1.40  2008/07/03 14:42:05  fprelz
#       Increased version to 1.11.2.
#
#       Revision 1.39  2008/06/30 15:56:58  fprelz
#       Increased version again.
#
#       Revision 1.38  2008/06/30 15:54:16  fprelz
#       Rolled back version temporarily. Added automake conditional for Globus.
#
#       Revision 1.36  2008/02/05 14:31:57  fprelz
#       Bump up version for ANT builds.
#
#       Revision 1.35  2008/02/05 13:50:11  fprelz
#       Bump version up for ANT builds.
#
#       Revision 1.34  2007/10/25 13:02:37  fprelz
#       Increased version to 1.9.0.
#
#       Revision 1.33  2006/11/30 17:53:03  drebatto
#       Fixed wrong version number
#
#       Revision 1.32  2006/11/30 17:36:11  drebatto
#       Bug #20357 addressed. Other race conditions and memory corruption found and solved.
#
#       Revision 1.31  2006/06/20 12:46:13  mezzadri
#       increased version
#
#       Revision 1.30  2006/03/31 07:30:32  pandreet
#       Incremented version number
#
#       Revision 1.29  2006/02/20 09:06:54  pandreet
#       Incremented version number
#
#       Revision 1.28  2006/02/16 10:49:47  mezzadri
#       changed version number
#
#       Revision 1.27  2005/12/01 16:19:17  gfiorent
#       Fixed bug #14007, filtered "env" attribute in submission classad
#
#       Revision 1.26  2005/11/28 10:05:25  mezzadri
#       added config file for blah
#
#       Revision 1.25  2005/10/05 10:11:36  pandreet
#       Increased version number
#
#       Revision 1.24  2005/08/05 15:15:48  pandreet
#       Changed version to 1.5
#
#       Revision 1.23  2005/07/27 10:23:33  pandreet
#       Modified version number
#
#       Revision 1.22  2005/07/27 09:35:47  pandreet
#       Modified version number
#
#       Revision 1.21  2005/06/08 14:12:30  mezzadri
#       changed version from 1.2.2 to 1.2.4
#
#       Revision 1.20  2005/03/23 11:12:19  drebatto
#       Some more files to align...
#
#       Revision 1.14.2.4  2005/03/11 19:42:26  fprelz
#       Added support for the BLAH_JOB_REFRESH_PROXY command in blahpd.
#       Revised the batch system submit and status scripts.
#
#       Revision 1.14.2.3  2005/02/25 14:25:37  mezzadri
#       changed minor version number
#
#       Revision 1.14.2.2  2005/02/03 16:19:04  drebatto
#       Version number incremented
#
#       Revision 1.14.2.1  2005/02/01 13:54:26  drebatto
#       Aligned to MAIN
#
#       Revision 1.14  2004/12/09 13:59:13  mezzadri
#       changed version number
#
#       Revision 1.13  2004/11/25 14:53:34  mezzadri
#       changed version number
#
#       Revision 1.12  2004/11/16 15:45:12  eronchie
#       Increased version
#
#       Revision 1.11  2004/10/05 16:05:45  drebatto
#       Support for "gridtype" added.
#       Patched a bug preventing classad with both "Args" and "Queue" to be parsed correctly.
#
#       Revision 1.10  2004/09/22 11:44:20  pandreet
#       Runtime scripts in tarball and rpms
#
#       Revision 1.9  2004/09/22 09:16:56  glbuild
#       Removed AM_CONFIG_HEADER
#
#       Revision 1.8  2004/09/22 01:54:20  dimeglio
#       Added AM_CONFIG_HEADER
#
#       Revision 1.7  2004/09/22 00:15:23  dimeglio
#       Fixed missing parenthesis in AC_INIT
#       Added default prefix
#
#

AC_PREREQ(2.57)
AC_INIT([GLite CE blahp], [1.19.0])
AC_CONFIG_AUX_DIR([./project])
AM_INIT_AUTOMAKE([1.6.3 subdir-objects])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([src/autogen/acconfig.h])
                                                                                
#Environment.
WORKDIR=`pwd`
AC_SUBST(WORKDIR)
                                                                                                                          
dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_LIBTOOL

dnl Checks for libraries.
dnl Replace `main' with a function in -lpthread:
AC_CHECK_LIB(pthread, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(sys/time.h syslog.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(select socket strdup strerror bsearch vsnprintf mmap munmap)
AC_CHECK_FUNCS(dlopen, ,AC_CHECK_LIB(dl, dlopen))

dnl GLITE_CHECK_LIBDIR
dnl GLITE_CHECK_INITDIR
dnl AC_GLITE_DOCBOOK

GLITE_DB_MANPAGES_STYLESHEET="/usr/share/sgml/docbook/xsl-stylesheets/manpages/docbook.xsl"

AC_ARG_WITH(manpage_stylesheet,
   [  --with-manpage-stylesheet=PATH     (path to the docbook stylesheet for man pages ($GLITE_DB_MANPAGES_STYLESHEET)],
   [],
   with_manpage_stylesheet=$GLITE_DB_MANPAGES_STYLESHEET)

if ! test -r "$with_manpage_stylesheet" ; then
  AC_MSG_ERROR("$with_manpage_stylesheet not found. Try setting --with-manpage-stylesheet.")
fi

GLITE_DB_MANPAGES_STYLESHEET=$with_manpage_stylesheet
AC_SUBST(GLITE_DB_MANPAGES_STYLESHEET)

AC_ARG_WITH(dist_location,
   [  --with-dist-location=PFX     prefix where DIST location is. (pwd)],
   [],
   with_dist_location=$WORKDIR/../dist)

AC_ARG_ENABLE(bprserver,
   [  --enable-bprserver Enable BPR server],
   [ if test "$enableval" = "yes" ; then
         bprserver=$enableval
     else
         bprserver="no"
     fi],
   bprserver="no")

DISTTAR=$with_dist_location

AC_SUBST(DISTTAR)

AC_CLASSADS([], AC_MSG_RESULT(["CLASSADS ok"]), AC_MSG_ERROR(["CLASSADS not found"]))

AC_ARG_WITH([globus], AS_HELP_STRING([--without-globus], [Disable use of Globus libraries]))

if test "x$with_globus" != "xno"; then
  AC_GLOBUS([], have_globus=yes, have_globus=no)

  if test $have_globus = no; then
    have_globus=yes
    PKG_CHECK_MODULES(GLOBUS_GSI_CRED, globus-gsi-credential, , have_globus=no)
    PKG_CHECK_MODULES(GLOBUS_GSI_PROXY, globus-gsi-proxy-core, , have_globus=no)
    PKG_CHECK_MODULES(GLOBUS_GSI_UTILS, globus-gsi-cert-utils, , have_globus=no)
    PKG_CHECK_MODULES(GLOBUS_GSS_ASSIST, globus-gss-assist, , have_globus=no)
    PKG_CHECK_MODULES(GLOBUS_GSI_SYSCFG, globus-gsi-sysconfig, , have_globus=no)
    PKG_CHECK_MODULES(GLOBUS_GSSAPI_GSI, globus-gssapi-gsi, , have_globus=no)
  fi
  AC_MSG_RESULT(["GLOBUS found: $have_globus"])
else
  have_globus=no
  AC_MSG_RESULT(["Compiling without Globus"])
fi
AM_CONDITIONAL([HAVE_GLOBUS], [test "x$bprserver" == "xyes" -a "x$have_globus" == "xyes"])

dnl Temporarily built with no optimisation

CXXFLAGS="-g -O0"
CFLAGS="-g -O0"

AC_DEFINE_UNQUOTED([VERSION], ["${PVER}"], [Package version from ETICS])

# Configuration items
AC_PREFIX_DEFAULT([/opt/glite])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([config/Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_CONFIG_FILES([src/scripts/Makefile])
AC_CONFIG_FILES([doc/Makefile])

AC_OUTPUT
